fix for buttons on mobile

--- a/styles.css
+++ b/styles.css
@@ -209,7 +209,7 @@ button {
   transform: translate(2px, 2px);
 }
 
-@media (max-width: 600px) {
+@media (max-width: 640px) {
   .about {
     display: flex;
     justify-content: center;
